<resources>
    <string name="app_name">TutorTime</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginLogIn">Log In</string>
    <string name="loginCreatenewAccount">Create a new Account!</string>
    <string name="loginResetPassword">Reset Password</string>
    <string name="loginChangeLanguage">Change language</string>
    <string name="registerAcount">Create a New Account</string>
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerSignUp">Sign Up</string>
    <string name="registerHaveAccountLogin">Have Account? Login</string>
    <string name="chooseStatusTutor">Tutor</string>
    <string name="chooseStatusCustomer">Customer</string>
    <string name="setTutorProfileContactNo">Contact No</string>
    <string name="setTutorProfileSelectServiceCities">Select service cities</string>
    <string name="setTutorProfileAboutMe">About Me</string>
    <string name="setTutorProfileSubjectList">Subject List</string>
    <string name="setTutorProfileAddSubject">Add Subject</string>
    <string name="setTutorProfileSaveprofile">Save profile</string>
    <string name="TutorCardCantRate">you cant rate yourself!</string>
    <string name="lastSeen">last seen at:</string>
    <string name="deleteChatDialog">Delete notification</string>
    <string name="offline">Offline</string>
    <string name="cantSendMessage">You cant send message to yourself!</string>
    <string name="writeMessageFirst">You need to write a message first!</string>
    <string name="open_door_image_to_open_the_chat" translatable="false">open door image to open the chat</string>
    <string name="trash_can_image_do_remove_chat" translatable="false">trash can image do remove chat</string>
    <string name="delete_chat_icon" translatable="false" />
    <string name="the_other_user_profile_picture" translatable="false">the other user profile picture</string>
    <string name="deleteNotificationDialog">Delete notification</string>
    <string name="areYouSure">are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="chatReceived">Chat received!</string>
    <string name="chatWith">Chat with</string>
    <string name="isActive">is active</string>
    <string name="notificationRegisterTitle">Welcome to TutorTime!</string>
    <string name="notificationRegisterText">your register is completed ,enjoy learning</string>
    <string name="notificationTutorProfileTitle">Congratulations!</string>
    <string name="notificationTutorProfileText">you are a teacher!</string>
    <string name="notificationChatTitle">New chat received!</string>
    <string name="notificationChatTextWith">Chat with</string>
    <string name="notificationChatTextIs">is active</string>
    <string name="notificationRankingTitle">Rating received!</string>
    <string name="notificationRankingText">You are rated! you can check your rank in your Teacher profile </string>
    <string name="CustomerProfileChooseGender">Choose Gender</string>
    <string name="CustomerProfileChooseCity">Choose city</string>
    <string name="CustomerProfileFirstNameRequired">First name is required!</string>
    <string name="CustomerProfileLastNameRequired">Last name is required!</string>
    <string name="CustomerProfileCityRequired">City is required!</string>
    <string name="CustomerProfileGenderRequired">Gender is required!</string>
    <string name="mySubListServiceCities">Service cities</string>
    <string name="mySubListSelectServiceCities">Select service cities</string>
    <string name="mySubListSubjectList">Subject List</string>
    <string name="mySubListAddSubject">Add Subject</string>
    <string name="mySubListHome">Home</string>
    <string name="imageDialogUpdate">Update</string>
    <string name="imageDialogDelete">Delete</string>
    <string name="subjectAddDialogAddSubject">Add subject</string>
    <string name="subjectAddDialogExperience">Experience</string>
    <string name="subjectAddDialogAdd">Add</string>
    <string name="subjectAddDialogClose">Close</string>
    <string name="subjectEditDialogEditSubject">Edit subject</string>
    <string name="subjectEditDialogExperience">Experience</string>
    <string name="subjectEditDialogSAVE">SAVE</string>
    <string name="subjectEditDialogDelete">Delete</string>
    <string name="subjectEditDialogClose">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Tutor Time!</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="actionChangeLanguage">Change language</string>
    <string name="cities_hint">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_tutor_profile">My Tutor Profile</string>
    <string name="menu_my_subject_list">My Subject List</string>
    <string name="menu_new_tutor_profile">Create Tutor Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="sort_by">Sort Results</string>
    <string name="max_price">Max</string>
    <string name="min_price">Min</string>
    <string name="lowtohigh">price: low to high</string>
    <string name="hightolow">price: high to low</string>
    <string name="rating">Rating: high to low</string>
    <string name="recommendations">Recommendations</string>
    <string name="All">All</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string-array name="Gender">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="Cities">
        <item>Afula</item>
        <item>Akko</item>
        <item>Arad</item>
        <item>Ariel</item>
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Baqa-al-Gharbiyye</item>
        <item>Bat-Yam</item>
        <item>Beer-Sheva</item>
        <item>Beit-Shean</item>
        <item>Beit-Shemesh</item>
        <item>Betar-Illit</item>
        <item>Bnei-Berak</item>
        <item>Dimona</item>
        <item>Eilat</item>
        <item>Elad</item>
        <item>Givatayim</item>
        <item>Hadera</item>
        <item>Haifa</item>
        <item>Harish</item>
        <item>Herzliya</item>
        <item>Hod-HaSharon</item>
        <item>Holon</item>
        <item>Jerusalem</item>
        <item>Karmiel</item>
        <item>Kfar-Sava</item>
        <item>Kiryat-Ata</item>
        <item>Kiryat-Bialik</item>
        <item>Kiryat-Gat</item>
        <item>Kiryat-Malachi</item>
        <item>Kiryat-Motzkin</item>
        <item>Kiryat-Ono</item>
        <item>Kiryat-Shemone</item>
        <item>Kiryat-Yam</item>
        <item>Lod</item>
        <item>Maale-Adumim</item>
        <item>Maalot-Tarshiha</item>
        <item>Migdal-HaEmek</item>
        <item>Modiin</item>
        <item>Nahariya</item>
        <item>Nazareth</item>
        <item>Nes-Ziona</item>
        <item>Nesher</item>
        <item>Netanya</item>
        <item>Netivot</item>
        <item>Nof-Hagalil</item>
        <item>Ofakim</item>
        <item>Or-Akiva</item>
        <item>Or-Yehuda</item>
        <item>Petah-Tikva</item>
        <item>Qalansawe</item>
        <item>Raanana</item>
        <item>Rahat</item>
        <item>Ramat-Hasharon</item>
        <item>Ramat-Gan</item>
        <item>Ramla</item>
        <item>Rehovot</item>
        <item>Rishon-Lezion</item>
        <item>Rosh-Haayin</item>
        <item>Sakhnin</item>
        <item>Sderot</item>
        <item>Shefaram</item>
        <item>Taibeh</item>
        <item>Tamra</item>
        <item>Tel-Aviv</item>
        <item>Tiberias</item>
        <item>Tira</item>
        <item>Tirat-Carmel</item>
        <item>Tsfat</item>
        <item>Umm</item>
        <item>Yavne</item>
        <item>Yehud-Monosson</item>
        <item>Yokneam</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="result">Result:</string>
    <string name="learning_type">Learning Type</string>
    <string name="subject">Subject</string>
    <string name="area">Area</string>
    <string name="type">Type</string>
    <string name="city">City</string>
    <string name="search_header">Search For Tutors</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="price">Price</string>
    <string name="choose_city">Choose City</string>
    <string name="send_message">Send Message</string>
    <string name="Online_Frontal">Online/Frontal</string>
    <string name="Online">Online</string>
    <string name="Frontal">Frontal</string>
    <string name="Description">"Description: "</string>
    <string name="Cancel">Cancel</string>
    <string name="Clear">Clear All</string>
    <string name="OK">OK</string>
    <string name="Select">Select Sort</string>
    <string name="priceLow">Price: low to high</string>
    <string name="priceHigh">price: high to low</string>
    <string name="filter_by">Filter by rating</string>
    <string name="rate_the_tutor">Rate the tutor</string>
    <string name="opinion">Ratings</string>
    <string name="Select_Rating">Select Rating</string>
    <string name="phone">phone</string>
    <string name="Phone_of">Phone of </string>
    <string name="cityCard">City:</string>
    <string name="priceCard">Price:</string>
    <string name="learning_typeCard">Learning Type:</string>
    <string name="subjectCard">Subject:</string>
</resources>