<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.tutortime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_teacher_card"
        android:name="com.project.tutortime.ui.teachercard.TeacherCard"
        android:label="@string/menu_teacher_card"
        tools:layout="@layout/teacher_card_fragment" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.project.tutortime.ui.search.Search"
        android:label="@string/menu_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.project.tutortime.ui.notifications.Notifications"
        android:label="@string/menu_notifications"
        tools:layout="@layout/notifications_fragment" />
</navigation>